# actps-back

./: alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 29429b97e19e_.py  50e00e2b3d46_.py  87f55314ce5b_.py  b0261e4e8913_.py  c8d294e8569f_.py  d2457bec7649_.py  d8689e45aae8_.py  f522eba0f7e2_.py
src/actps/: app.py  config.py
src/actps/core/: base_entity.py  cache_service.py  repository.py  trafic_monitor.py  unit_of_work.py
src/actps/domain/logs/: __init__.py  package_log.py  process_log.py
src/actps/domain/pc/: __init__.py  personal_computer.py
src/actps/domain/router/: __init__.py  model.py
src/actps/domain/warning/: model.py
src/actps/gateway/: urls.py
src/actps/gateway/converter/: __init__.py  package_log_converter.py  pc_converter.py  process_log_converter.py  router_converter.py  warning_converter.py
src/actps/gateway/handler/: __init__.py  daemon_connection_handler.py  personal_computer_handler.py  router_handler.py  trafic_monitoring_handler.py  warning_handler.py
src/actps/gateway/schemas/: __init__.py  package_log_schemas.py  personal_computer_schemas.py  process_log_scheme.py  router_schemas.py  warning_schemas.py
src/actps/integrations/postgres/: engine.py  tables.py
src/actps/integrations/redis/: redis.py
src/actps/repository/: __init__.py  repository_factory.py
src/actps/repository/logs/: __init__.py  converter.py  statements.py  (+2 more)
src/actps/trafic_monitor/: json_parser.py  monitor.py  trafic_storage_manager.py
src/actps/views/: __init__.py  pc_views.py  router_views.py  warning_views.py
(+24 files in other folders)
