[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["D-Diyazzz <diyazzz.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
websockets = "^14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
